--- a/session-adminpanel/views/header.ejs
+++ b/session-adminpanel/views/header.ejs
@@ -27,6 +27,8 @@
   <link rel="stylesheet" href="../assets/fonts/fontawesome.css">
   <!-- [Material Icons] https://fonts.google.com/icons -->
   <link rel="stylesheet" href="../assets/fonts/material.css">
+  <!-- Flash Message -->
+  <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.22.0/dist/sweetalert2.min.css" rel="stylesheet">
   <!-- [Template CSS Files] -->
   <link rel="stylesheet" href="../assets/css/style.css" id="main-style-link">
   <link rel="stylesheet" href="../public/assets/css/">
@@ -189,7 +191,7 @@
               <div class="dropdown-header">
                 <div class="d-flex mb-1">
                   <div class="flex-grow-1 ms-3">
-                    <h6 class="mb-1"> 🤷‍♀️ shruti kathiriya</h6>
+                    <h6 class="mb-1"> 🤷‍♀️ <%=currentAdmin.name%></h6>
                     <span>full-stack devloper</span>
                   </div>
                   <a href="/logout" class="pc-head-link bg-transparent"><i class="ti ti-power text-danger"></i></a>
