--- a/session-adminpanel/views/viewprofile.ejs
+++ b/session-adminpanel/views/viewprofile.ejs
@@ -153,7 +153,10 @@
           <div class="value"><%= currentAdmin.desc %></div>
         </div>
       </div>
-      
+      <div>
+          <a href="/editprofile/?id=<%= currentAdmin._id %>" class="btn btn-primary mt-4">editProfile</a>
+       
+      </div>
     </div>
   </div>
 </div>
