--- a/session-adminpanel/views/footer.ejs
+++ b/session-adminpanel/views/footer.ejs
@@ -40,6 +40,34 @@
 <script>font_change("Public-Sans");</script>
   
 
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.22.0/dist/sweetalert2.all.min.js"></script>
+<script>
+
+    <%if (success && success.length > 0) { %>
+
+    Swal.fire({
+      title: "Success!",
+      text: "<%= success%>",
+      icon: "success"
+    });
+
+
+<%}%>
+
+    
+<%if (error && error.length > 0) { %>
+
+    Swal.fire({
+      title: "Error!",
+      text: "<%= error%>",
+      icon: "error"
+    });
+
+
+<%}%>
+
+
+
 </body>
 <!-- [Body] end -->
 
