--- a/session-adminpanel/views/footer.ejs
+++ b/session-adminpanel/views/footer.ejs
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-sm my-1">
         <p class="m-0"
-          >Mantis &#9829; crafted by Team <a href="#" target="_blank">Codedthemes</a> Distributed by <a href="https://themewagon.com/">ThemeWagon</a>.</p
+          >Mantis &#9829; crafted by Team <a href="#" target="_blank">Codedthemes</a> Distributed by <a href="#">ThemeWagon</a>.</p
         >
       </div>
       <div class="col-auto my-1">
@@ -51,9 +51,7 @@
       icon: "success"
     });
 
-
 <%}%>
-
     
 <%if (error && error.length > 0) { %>
 
@@ -66,7 +64,7 @@
 
 <%}%>
 
-
+</script>
 
 </body>
 <!-- [Body] end -->
