--- a/session-adminpanel/views/viewAdmin.ejs
+++ b/session-adminpanel/views/viewAdmin.ejs
@@ -75,7 +75,7 @@
                     <th>Hobby</th>
                     <th>City</th>
                     <th>Description</th>
-                    <th>Avatar</th>
+                    <th>image</th>
                     <th>Action</th>
                   </tr>
                 </thead>
@@ -144,7 +144,7 @@
                       <th scope="col">Hobby</th>
                       <th scope="col">City</th>
                       <th scope="col">Description</th>
-                      <th scope="col">Avatar</th>
+                      <th scope="col">image</th>
                     </tr>
                   </thead>
                   <tbody>
@@ -176,7 +176,7 @@
                         <td>
                           <%= data.desc %>
                         </td>
-                        <td><img src="<%= data.avatar %>" height="100"></td>
+                        <td><img src="<%= data.image %>" height="100"></td>
                       </tr>
 
 
