--- a/session-adminpanel/views/viewprofile.ejs
+++ b/session-adminpanel/views/viewprofile.ejs
@@ -152,9 +152,13 @@
           <label>Description</label>
           <div class="value"><%= currentAdmin.desc %></div>
         </div>
+        <div class="col-md-6">
+          <label>image</label>
+          <img src="<%=currentAdmin.image %>" alt="" width="100px" height="100px">
+        </div>
       </div>
       <div>
-          <a href="/editprofile/?id=<%= currentAdmin._id %>" class="btn btn-primary mt-4">editProfile</a>
+          <a href="/editprofile/<%= currentAdmin._id %>" class="btn btn-primary mt-4">editProfile</a>
        
       </div>
     </div>
